--- a/app/templates/account/profile.jade
+++ b/app/templates/account/profile.jade
@@ -3,6 +3,11 @@ extends /templates/base
 block content
   if allowedToEditJobProfile
     .profile-control-bar
+      if linkedInAuthorized
+        button.btn#importLinkedIn
+          span Import LinkedIn
+      else
+        script(type="in/Login" id="linkedInAuthButton" data-onAuth="contractCallback")
       if editing
         .progress.profile-completion-progress
           .progress-bar.progress-bar-success(style="width: #{100 * progress}%")
