--- a/app/templates/account/profile.jade
+++ b/app/templates/account/profile.jade
@@ -3,11 +3,7 @@ extends /templates/base
 block content
   if allowedToEditJobProfile
     .profile-control-bar
-      if linkedInAuthorized
-        button.btn#importLinkedIn
-          span Import LinkedIn
-      else
-        script(type="in/Login" id="linkedInAuthButton" data-onAuth="contractCallback")
+      
       if editing
         .progress.profile-completion-progress
           .progress-bar.progress-bar-success(style="width: #{100 * progress}%")
@@ -23,6 +19,12 @@ block content
         button.btn#toggle-editing
           i.icon-cog
           span(data-i18n="account_profile.edit_profile") Edit Profile
+      if linkedInAuthorized
+        button.btn.btn-success#importLinkedIn
+          i.icon-arrow-down
+          span Import LinkedIn
+      else
+        script(type="in/Login" id="linkedInAuthButton" data-onAuth="contractCallback")
       if profile.active
         button.btn.btn-success#toggle-job-profile-active
           i.icon-eye-open
