--- a/app/styles/account/profile.sass
+++ b/app/styles/account/profile.sass
@@ -38,6 +38,9 @@
       i
         margin-right: 5px
       
+    .linked-in-button
+      cursor: default
+
     .sample-profile
       position: absolute
       right: 5px
