--- a/app/templates/admin.jade
+++ b/app/templates/admin.jade
@@ -33,3 +33,11 @@ block content
       a(href="/admin/base", data-i18n="admin.av_other_debug_base_url") Base (for debugging base.jade)
     li
       a(href="/admin/clas", data-i18n="admin.clas") CLAs
+
+  hr
+
+  h3 Achievements
+  p This is just some stuff for temporary achievement testing. Should be replaced by a demo system.
+
+  input#increment-field(type="text")
+  a.btn.btn-secondary#increment-button(href="#") Increment
