Upgrades to employer's candidate indexing.

--- a/app/styles/employers.sass
+++ b/app/styles/employers.sass
@@ -1,6 +1,10 @@
 #employers-view
-  #see-candidates
-    cursor: pointer
+  .see-candidates-header
+    margin-bottom: 30px
+
+    #see-candidates
+      cursor: pointer
+
   .tablesorter
     //img
     //  display: none
