--- a/app/templates/employers.jade
+++ b/app/templates/employers.jade
@@ -6,62 +6,77 @@ block content
 
   p
     span(data-i18n="employers.candidates_count_prefix") We currently have 
-    if candidates.length
-      | #{candidates.length}
+    if activeCandidates.length
+      | #{activeCandidates.length}
     else
       span(data-i18n="employers.candidates_count_many") many
     |  
     span(data-i18n="employers.candidates_count_suffix") highly skilled and vetted developers looking for work.
-  if !isEmployer
-    
-    h3
+
+  if !isEmployer && !me.isAdmin()
+    h3.see-candidates-header
       a#see-candidates(title='Contact', tabindex=-1, data-toggle="coco-modal", data-target="modal/employer_signup", data-i18n="employers.see_candidates") Click here to see our candidates
-      
+
   if candidates.length
-    table.table.table-condensed.table-hover.table-responsive.tablesorter
-      thead
-        tr
-          th(data-i18n="general.name") Name
-          th(data-i18n="employers.candidate_location") Location
-          th(data-i18n="employers.candidate_looking_for") Looking For
-          th(data-i18n="employers.candidate_role") Role
-          th(data-i18n="employers.candidate_top_skills") Top Skills
-          th(data-i18n="employers.candidate_years_experience") Yrs Exp
-          th(data-i18n="employers.candidate_last_updated") Last Updated
-          if me.isAdmin()
-            th(data-i18n="employers.candidate_approved") Us?
-            th(data-i18n="employers.candidate_active") Them?
-  
-      tbody
-        for candidate, index in candidates
-          - var profile = candidate.get('jobProfile');
-          - var authorized = candidate.id;  // If we have the id, then we are authorized.
-          tr(data-candidate-id=candidate.id, id=candidate.id)
-            td
-              if authorized
-                img(src=candidate.getPhotoURL(50), alt=profile.name, title=profile.name, height=50)
-                p= profile.name
-              else
-                img(src="/images/pages/contribute/archmage.png", alt="", title="Sign up as an employer to see our candidates", width=50)
-                p Developer ##{index + 1}
-            if profile.country == 'USA'
-              td= profile.city
-            else
-              td= profile.country
-            td= profile.lookingFor
-            td= profile.jobTitle
-            td
-              each skill in profile.skills.slice(0, 10)
-                code= skill
-                span  
-            td= profile.experience
-            td(data-profile-age=(new Date() - new Date(profile.updated)) / 86400 / 1000)= moment(profile.updated).fromNow()
-            if me.isAdmin()
-              if candidate.get('jobProfileApproved')
-                td ✓
-              else
-                td ✗
-              if profile.active
-                td ✓
-              else
-                td ✗
+
+    ul.nav.nav-pills
+      li.active
+        a(href="#featured-candidates", data-toggle="tab")
+          span(data-i18n="employers.featured_developers") Featured Developers
+          |  (#{featuredCandidates.length})
+      if otherCandidates.length
+        li
+          a(href="#other-candidates", data-toggle="tab")
+            span(data-i18n="employers.other_developers") Other Developers
+            |  (#{otherCandidates.length})
+      if me.isAdmin() && inactiveCandidates.length
+        li
+          a(href="#inactive-candidates", data-toggle="tab")
+            span(data-i18n="employers.inactive_developers") Inactive Developers
+            |  (#{inactiveCandidates.length})
+
+    div.tab-content
+      for area, tabIndex in [{id: "featured-candidates", candidates: featuredCandidates}, {id: "other-candidates", candidates: otherCandidates}, {id: "inactive-candidates", candidates: inactiveCandidates}]
+        div(class="tab-pane well" + (tabIndex ? "" : " active"), id=area.id)
+          table.table.table-condensed.table-hover.table-responsive.tablesorter
+            thead
+              tr
+                th(data-i18n="general.name") Name
+                th(data-i18n="employers.candidate_location") Location
+                th(data-i18n="employers.candidate_looking_for") Looking For
+                th(data-i18n="employers.candidate_role") Role
+                th(data-i18n="employers.candidate_top_skills") Top Skills
+                th(data-i18n="employers.candidate_years_experience") Yrs Exp
+                th(data-i18n="employers.candidate_last_updated") Last Updated
+                if me.isAdmin() && area.id == 'inactive-candidates'
+                  th ✓?
+        
+            tbody
+              for candidate, index in area.candidates
+                - var profile = candidate.get('jobProfile');
+                - var authorized = candidate.id;  // If we have the id, then we are authorized.
+                tr(data-candidate-id=candidate.id, id=candidate.id)
+                  td
+                    if authorized
+                      img(src=candidate.getPhotoURL(50), alt=profile.name, title=profile.name, height=50)
+                      p= profile.name
+                    else
+                      img(src="/images/pages/contribute/archmage.png", alt="", title="Sign up as an employer to see our candidates", width=50)
+                      p Developer ##{index + 1 + (area.id == 'featured-candidates' ? 0 : featuredCandidates.length)}
+                  if profile.country == 'USA'
+                    td= profile.city
+                  else
+                    td= profile.country
+                  td= profile.lookingFor
+                  td= profile.jobTitle
+                  td
+                    each skill in profile.skills.slice(0, 10)
+                      code= skill
+                      span  
+                  td= profile.experience
+                  td(data-profile-age=(new Date() - new Date(profile.updated)) / 86400 / 1000)= moment(profile.updated).fromNow()
+                  if me.isAdmin() && area.id == 'inactive-candidates'
+                    if candidate.get('jobProfileApproved')
+                      td ✓
+                    else
+                      td ✗
