Added employer_list and activity tracking.

--- a/app/templates/admin.jade
+++ b/app/templates/admin.jade
@@ -23,6 +23,8 @@ block content
       a(href="/admin/users", data-i18n="admin.av_entities_users_url") Users
     li
       a(href="/admin/level_sessions", data-i18n="admin.av_entities_active_instances_url") Active Instances
+    li
+      a(href="/admin/employer_list", data-i18n="admin.av_entities_employer_list_url") Employer List
         
   h4(data-i18n="admin.av_other_sub_title") Other
 
