--- a/app/templates/play/ladder/ladder.jade
+++ b/app/templates/play/ladder/ladder.jade
@@ -18,6 +18,11 @@ block content
         |  
         a(href="http://blog.codecombat.com/multiplayer-programming-tournament", data-i18n="ladder.tournament_blurb_blog") on our blog
         | .
+      p
+        | At 5PM PDT today, we'll take a snapshot of submitted code and run an exhaustive pairwise ranking between the top N (at least 200) players. Winners will be sorted by 
+        code wins - losses
+        | , and especially given deduplication on each team, final rankings may look significantly different than these preliminary rankings.
+        | We will announce winners as soon as we can. Thanks for playing!
 
       .sponsor-logos
         a(href="https://heapanalytics.com/")
