--- a/app/templates/play/ladder/ladder.jade
+++ b/app/templates/play/ladder/ladder.jade
@@ -19,10 +19,15 @@ block content
         a(href="http://blog.codecombat.com/multiplayer-programming-tournament", data-i18n="ladder.tournament_blurb_blog") on our blog
         | .
       p
-        | At 5PM PDT today, we'll take a snapshot of submitted code and run an exhaustive pairwise ranking between the top N (at least 200) players. Winners will be sorted by 
+        strong Tournament ended!
+        |  At 5PM PDT, we took a snapshot of submitted code and are running an exhaustive pairwise ranking between all players. Winners will be sorted by 
         code wins - losses
         | , and especially given deduplication on each team, final rankings may look significantly different than these preliminary rankings.
         | We will announce winners as soon as we can. Thanks for playing!
+      p
+        | Want to commiserate? Head over to 
+        a(href="http://discourse.codecombat.com/") the forum
+        |  and discuss your strategies, your triumphs, and your turmoils.
 
       .sponsor-logos
         a(href="https://heapanalytics.com/")
