Improvements to profile views. Added links to players' code.

--- a/app/styles/account/profile.sass
+++ b/app/styles/account/profile.sass
@@ -75,7 +75,7 @@
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
         color: #555
 
-      ul.links, ul.projects
+      ul.links, ul.projects, ul.sessions
         margin: 0
         padding: 0
     
@@ -140,7 +140,7 @@
             background-color: rgb(177, 55, 25)
             padding: 15px
             font-size: 20px
-      
+
         .middle-column
           width: $middle-width - 2 * $middle-padding
           padding-left: $middle-padding
