a few copy edits

--- a/app/templates/employers.jade
+++ b/app/templates/employers.jade
@@ -23,7 +23,7 @@ block content
 
         h2 What is CodeCombat?
 
-        p CodeCombat is a multiplayer browser-based programming game. Players write code to control their forces in battle against other developers. We support JavaScript, Python, Lua, Clojure, and Io.
+        p CodeCombat is a multiplayer browser programming game. Players write code to control their forces in battle against other developers. We support JavaScript, Python, Lua, Clojure, and Io.
 
       div.information_row
 
@@ -39,7 +39,7 @@ block content
 
         img(class="employer_icon" src="/images/pages/employer/employer_icon2.png")
 
-        h2 How Do We Find Players?
+        h2 How Do We Find Developers?
 
         p We host competitive tournaments to attract competitive software engieneers. We then use in-house algorithms to identify the best players among the top 5% of tournament winners.
 
@@ -49,7 +49,7 @@ block content
 
         h2 Why Hire Through Us?
 
-        p Every CodeCombateer listed is looking for work, has demonstrated top notch technical skills, and has been personally screened by us. It's also completely free to search through us.
+        p We will save you time. Every CodeCombateer we list is <strong>looking for work</strong>, has <strong>demonstrated top notch technical skills</strong>, and has been <strong>personally screened by us</strong>. Stop screening and start hiring. 
 
   if !isEmployer && !me.isAdmin()
       h3.see-candidates-header
