--- a/app/templates/account/profile.jade
+++ b/app/templates/account/profile.jade
@@ -175,7 +175,7 @@ block content
               ul.sessions
                 each session in sessions
                   li
-                    - var sessionLink = "/play/level/" + session.levelID + "?team=" + (session.team || 'humans') + "&session=" + session._id;
+                    - var sessionLink = "/play/level/" + session.levelID + "?team=" + (session.team || 'humans') + (myProfile ? '' : "&session=" + session._id);
                     a(href=sessionLink)
                       span= session.levelName
                       if session.team
