--- a/app/templates/employers.jade
+++ b/app/templates/employers.jade
@@ -4,52 +4,52 @@ block content
 
   h1(data-i18n="employers.want_to_hire_our_players") Hire CodeCombat Players
 
-  div#info_wrapper
-
-    div#leftside
-
-      div.information_row
-
-        img(class="employer_icon" src="/images/pages/employer/employer_icon1.png")
-
-        h2(data-i18n="employers.what") What is CodeCombat?
-
-        p(data-i18n="employers.what_blurb") CodeCombat is a multiplayer browser programming game. Players write code to control their forces in battle against other developers. We support JavaScript, Python, Lua, Clojure, CoffeeScript, and Io.
-
-      div.information_row
-
-        img(class="employer_icon" src="/images/pages/employer/employer_icon3.png")
-
-        h2(data-i18n="employers.who") Who Are the Players?
-
-        p(data-i18n="employers.who_blurb") CodeCombateers are software developers who enjoy using their programming skills to play games. They range from college seniors at top 20 engineering programs to 20-year industry veterans.
-
-    div#rightside
-
-      div.information_row
-
-        img(class="employer_icon" src="/images/pages/employer/employer_icon2.png")
-
-        h2(data-i18n="employers.how") How Do We Find Developers?
-
-        p(data-i18n="employers.how_blurb") We host competitive tournaments to attract competitive software engieneers. We then use in-house algorithms to identify the best players among the top 5% of tournament winners.
-
-      div.information_row
-
-        img(class="employer_icon" src="/images/pages/employer/employer_icon4.png")
-
-        h2(data-i18n="employers.why") Why Hire Through Us?
-
-        p
-          span(data-i18n="employers.why_blurb_1") We will save you time. Every CodeCombateer we feaure is 
-          strong(data-i18n="employers.why_blurb_2") looking for work
-          span(data-i18n="employers.why_blurb_3") , has 
-          strong(data-i18n="employers.why_blurb_4") demonstrated top notch technical skills
-          span(data-i18n="employers.why_blurb_5") , and has been 
-          strong(data-i18n="employers.why_blurb_6") personally screened by us
-          span(data-i18n="employers.why_blurb_7") . Stop screening and start hiring.
-
   if !isEmployer && !me.isAdmin()
+    div#info_wrapper
+  
+      div#leftside
+  
+        div.information_row
+  
+          img(class="employer_icon" src="/images/pages/employer/employer_icon1.png")
+  
+          h2(data-i18n="employers.what") What is CodeCombat?
+  
+          p(data-i18n="employers.what_blurb") CodeCombat is a multiplayer browser programming game. Players write code to control their forces in battle against other developers. We support JavaScript, Python, Lua, Clojure, CoffeeScript, and Io.
+  
+        div.information_row
+  
+          img(class="employer_icon" src="/images/pages/employer/employer_icon3.png")
+  
+          h2(data-i18n="employers.who") Who Are the Players?
+  
+          p(data-i18n="employers.who_blurb") CodeCombateers are software developers who enjoy using their programming skills to play games. They range from college seniors at top 20 engineering programs to 20-year industry veterans.
+  
+      div#rightside
+  
+        div.information_row
+  
+          img(class="employer_icon" src="/images/pages/employer/employer_icon2.png")
+  
+          h2(data-i18n="employers.how") How Do We Find Developers?
+  
+          p(data-i18n="employers.how_blurb") We host competitive tournaments to attract competitive software engieneers. We then use in-house algorithms to identify the best players among the top 5% of tournament winners.
+  
+        div.information_row
+  
+          img(class="employer_icon" src="/images/pages/employer/employer_icon4.png")
+  
+          h2(data-i18n="employers.why") Why Hire Through Us?
+  
+          p
+            span(data-i18n="employers.why_blurb_1") We will save you time. Every CodeCombateer we feaure is 
+            strong(data-i18n="employers.why_blurb_2") looking for work
+            span(data-i18n="employers.why_blurb_3") , has 
+            strong(data-i18n="employers.why_blurb_4") demonstrated top notch technical skills
+            span(data-i18n="employers.why_blurb_5") , and has been 
+            strong(data-i18n="employers.why_blurb_6") personally screened by us
+            span(data-i18n="employers.why_blurb_7") . Stop screening and start hiring.
+
       h3.see-candidates-header
         a#see-candidates(title='Contact', tabindex=-1, data-toggle="coco-modal", data-target="modal/employer_signup", data-i18n="employers.see_candidates") Click here to see our candidates
 
@@ -106,7 +106,7 @@ block content
                   td= profile.lookingFor
                   td= profile.jobTitle
                   td
-                    each skill in profile.skills.slice(0, 10)
+                    each skill in profile.skills
                       code= skill
                       span  
                   td= profile.experience
