--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -66,6 +66,30 @@
       filter: brightness(1.2)
       -webkit-filter: brightness(1.2)
       box-shadow: 0 0 5px black
+
+  .code-languages
+    .primary-code-languages
+
+      #javascript
+        background: transparent url(/images/pages/home/language_js.png)
+        padding-right: 150px
+
+      #python
+        background: transparent url(/images/pages/home/language_python.png)
+        padding-left: 150px
+
+      .code-language
+        text-align: center
+        width: 498px
+        height: 153px
+        padding: 30px
+        margin-left: 11px
+
+    .secondary-code-languages
+      .code-language
+        text-align: center
+      
+
   
 #multiplayer-launch-modal
   .modal-dialog
