--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -68,27 +68,135 @@
       box-shadow: 0 0 5px black
 
   .code-languages
+    margin: 10px 0 30px 0
+
+    &:hover
+      .code-language
+        opacity: 0.6
+
+      .code-language.selected-language:not(:hover)
+        opacity: 0.8
+
+        h2, h3
+          text-shadow: none
+
+        .code-wizard
+          display: none
+
+    .code-language
+      cursor: pointer
+      text-align: center
+      position: relative
+      opacity: 0.6
+
+      &:hover
+        opacity: 1
+
+        h2, h3
+          text-shadow: 0px 0px 5px white
+
+        .code-wizard
+          display: block
+
+      &.selected-language
+        opacity: 1
+
+        h2, h3
+          text-shadow: 0px 0px 5px white
+
+        .code-wizard
+          display: block
+
+      .code-wizard
+        position: absolute
+        background: transparent url(/images/pages/home/wizard.png) no-repeat
+        background-size: contain
+        width: 111px
+        height: 97px
+        display: none
+
+      .code-language-beta
+        background: transparent url(/images/pages/home/language_beta_sticker.png) no-repeat
+        background-size: contain
+        width: 100px
+        height: 32px
+        position: absolute
+        right: 20px
+        top: -7px
+
     .primary-code-languages
 
       #javascript
-        background: transparent url(/images/pages/home/language_js.png)
+        background: transparent url(/images/pages/home/language_js.png) no-repeat
         padding-right: 150px
 
+        .code-wizard
+          left: 120px
+
       #python
-        background: transparent url(/images/pages/home/language_python.png)
+        background: transparent url(/images/pages/home/language_python.png) no-repeat
         padding-left: 150px
 
+        .code-wizard
+          right: 120px
+
       .code-language
-        text-align: center
         width: 498px
         height: 153px
         padding: 30px
-        margin-left: 11px
+        margin: 0px 0 0 -6px
+
+        .code-wizard
+          top: -65px
+
+        h2
+          margin: 15px 0 5px
 
     .secondary-code-languages
+      margin-left: -10px
+
+      .col-md-3
+        padding: 0px
+
       .code-language
-        text-align: center
-      
+        background: transparent url(/images/pages/home/language_background_small.png) no-repeat
+        width: 250px
+        height: 80px
+        margin: 20px 0 20px 0
+        padding: 20px 20px 20px 70px
+
+        .code-wizard
+          top: -51px
+          left: 89px
+          height: 63px
+
+        .code-language-logo
+          position: absolute
+          left: 15px
+          top: 17px
+          width: 50px
+          height: 50px
+
+        .code-language-beta
+          right: -15px
+          top: -16px
+          height: 24px
+
+        h3
+          margin: 0
+          padding: 0
+
+      #coffeescript .code-language-logo
+        background: transparent url(/images/pages/home/language_logo_coffeescript.png) no-repeat center
+
+      #clojure .code-language-logo
+        background: transparent url(/images/pages/home/language_logo_clojure.png) no-repeat center
+
+      #lua .code-language-logo
+        background: transparent url(/images/pages/home/language_logo_lua.png) no-repeat center
+
+      #io .code-language-logo
+        background: transparent url(/images/pages/home/language_logo_io.png) no-repeat center
 
   
 #multiplayer-launch-modal
