Switching code language based on selection now.

--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -81,7 +81,7 @@
           text-shadow: none
 
         .code-wizard
-          display: none
+          opacity: 0.5
 
     .code-language
       cursor: pointer
@@ -97,6 +97,7 @@
 
         .code-wizard
           display: block
+          opacity: 1
 
       &.selected-language
         opacity: 1
