--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -7,7 +7,7 @@ block content
   .code-languages
     .primary-code-languages.row
       .col-md-6
-        .code-language.selected-language#javascript(data-code-language='javascript')
+        .code-language#javascript(data-code-language='javascript')
           .code-wizard
           h2 JavaScript
           p The language of the web. Great for writing websites, web apps, HTML5 games, and servers.
